--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  color: MintCream;
+  color: RosyBrown;
   text-align: center;
 }
 .assign {
