--- a/csce242/examples/flex/styles.css
+++ b/csce242/examples/flex/styles.css
@@ -13,7 +13,37 @@ body {
 
 #core-header {
     /* background: #6b9747; */
-    color: rgb(112, 29, 1);
+    color: #701d01;
+}
+
+#core-main section, #core-main aside {
+    padding: 5px;
+}
+
+.squirrel {
+    background: #097604;
+    padding: 5px;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+#gallery {
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+#gallery section {
+    width: 25%;
+    text-align: center;
+}
+#gallery img {
+    padding: 5px;
+    border-radius: 5px;
+}
+
+/* Images */
+img {
+    max-width: 100%;
+    border-radius: 5px;
 }
 
 /* Core Navigation */
@@ -45,6 +75,14 @@ h1 {
     text-align: center;
 }
 
+.hide {
+    display: none;
+}
+
+.hide-small {
+    display: none;
+}
+
 @media only screen and (min-width: 768px) {
     body {
         background: url(images/tree.jpg);
@@ -52,12 +90,28 @@ h1 {
     }
 
     #content {
-        width: 70%;
+        width: 80%;
     }
 
     /* Columns */
     .columns {
         display: flex;
+    }
+
+    .one {
+        flex: 1;
+    }
+    .two {
+        flex: 2;
+    }
+    .three {
+        flex: 3;
+    }
+    .four {
+        flex: 4;
+    }
+    .five {
+        flex: 5;
     }
 
     /* Core Nav */
@@ -72,5 +126,9 @@ h1 {
 
     #core-nav a {
         padding: 5px;
+    }
+
+    .hide-small {
+        display: block;
     }
 }
