--- a/csce242/examples/flex/styles.css
+++ b/csce242/examples/flex/styles.css
@@ -1,5 +1,10 @@
+:root {
+    --primary-color: #6b9747;
+    --secondary-color: #097604;
+}
+
 body {
-    background: #6b9747;
+    background: var(--primary-color);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -21,7 +26,7 @@ body {
 }
 
 .squirrel {
-    background: #097604;
+    background: var(--secondary-color);
     padding: 5px;
     border-radius: 5px;
     margin: 5px;
