--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -22,6 +22,11 @@ body {
     border-radius: 10px;
     border: solid 4px #81064c;
     text-align: center;
+    flex: 1;
+}
+
+.assignment p {
+    padding: 0% 10%;
 }
 
 img {
@@ -81,6 +86,11 @@ h2 {
         margin: auto;
     }
 
+    .assignment p {
+        display: block;
+        max-width: 340px;
+    }
+
     img {
         max-width: 90%;
     }
@@ -88,5 +98,6 @@ h2 {
     /* Columns */
     .columns {
         display: flex;
+        flex-wrap: wrap;
     }
 }
