--- a/csce242/examples/js/styles.css
+++ b/csce242/examples/js/styles.css
@@ -233,6 +233,21 @@ footer p {
     text-align:center;
 }
 
+.clicked {
+    background: magenta;
+    color: white;
+}
+
+.happy {
+    color: goldenrod;
+    background: yellow;
+}
+
+.sad {
+    color: navy;
+    background: blue;
+}
+
 #map {
     width:100%;
     height:500px;
