--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -77,7 +77,7 @@ h2 {
     #content a {
         margin-left: 10px;
         margin-right: 10px;
-        max-width: calc((100% / 3) - 20px);
+        width: calc((100% / 3) - 20px);
     }
 
     .assignment {
