--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -61,6 +61,10 @@ h2 {
     text-align: center;
 }
 
+.spacer {
+    margin-top: 60px;
+}
+
 
 /* Larger Screens */
 @media only screen and (min-width: 768px) and (orientation: landscape) {
