--- a/csce242/examples/js/styles.css
+++ b/csce242/examples/js/styles.css
@@ -294,8 +294,9 @@ input {
 }
 
 #map {
-    width:100%;
-    height:500px;
+    width: 90%;
+    margin: 5%;
+    height: 500px;
 }
 
 .transparent {
