--- a/csce242/projects/part7/styles.css
+++ b/csce242/projects/part7/styles.css
@@ -152,6 +152,11 @@ form button {
     margin-top: 20px;
 }
 
+#submission-result {
+    text-align: center;
+    margin-top: 15px;
+}
+
 #list {
     padding-left: 0;
     display: flex;
